syntax = "proto3";
package nibiru.inflation.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nibiru/inflation/v1/inflation.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/inflation/types";

service Msg {
  // ToggleInflation defines a method to enable or disable inflation.
  rpc ToggleInflation(MsgToggleInflation) returns (MsgToggleInflationResponse) {
    option (google.api.http).post = "/nibiru/inflation/v1/toggle";
  };

  // EditInflationParams defines a method to edit the inflation params.
  rpc EditInflationParams(MsgEditInflationParams)
      returns (MsgEditInflationParamsResponse) {
    option (google.api.http).post = "/nibiru/inflation/edit-inflation-params";
  };
}

// MsgToggleInflation defines a message to enable or disable inflation.
message MsgToggleInflation {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string sender = 1;
  bool enable = 2 [ (gogoproto.moretags) = "yaml:\"enable\"" ];
}

message MsgEditInflationParams {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string sender = 1;
  bool inflation_enabled = 2;
  repeated string polynomial_factors = 3 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = true
  ];
  InflationDistribution inflation_distribution = 4
      [ (gogoproto.nullable) = true ];

  string epochs_per_period = 5 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = true
  ];
  string periods_per_year = 6 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = true
  ];
  string max_period = 7 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = true
  ];
}

message MsgToggleInflationResponse {}

message MsgEditInflationParamsResponse {}

// MsgBurn: allows burning of any token
message MsgBurn {
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  cosmos.base.v1beta1.Coin coin = 2
      [ (gogoproto.moretags) = "yaml:\"coin\"", (gogoproto.nullable) = false ];
}

message MsgBurnResponse {}
